--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,96 @@
 @tailwind utilities;
 
 @layer base {
-  h1 {
-    @apply text-red-500 font-bold text-3xl;
+  @font-face {
+    font-family: "National Regular";
+    font-style: normal;
+    font-weight: 400;
+    src: local("National Regular"),
+      url(fonts/NationalWeb-Regular.woff2) format("woff2"),
+      url(fonts/NationalWeb-Regular.woff) format("woff");
+  }
+  @font-face {
+    font-family: "National Regular";
+    font-style: italic;
+    font-weight: 400;
+    src: local("National Regular Italic"),
+      url(fonts/NationalWeb-RegularItalic.woff2) format("woff2"),
+      url(fonts/NationalWeb-RegularItalic.woff) format("woff");
+  }
+  @font-face {
+    font-family: "National Regular";
+    font-style: normal;
+    font-weight: 800;
+    src: local("National Extrabold"),
+      url(fonts/NationalWeb-Extrabold.woff2) format("woff2"),
+      url(fonts/NationalWeb-Extrabold.woff) format("woff");
+  }
+  @font-face {
+    font-family: "National Regular";
+    font-style: italic;
+    font-weight: 800;
+    src: local("National Extrabold Italic"),
+      url(fonts/NationalWeb-ExtraboldItalic.woff2) format("woff2"),
+      url(fonts/NationalWeb-ExtraboldItalic.woff) format("woff");
+  }
+  * {
+    @apply antialiased;
+  }
+  body {
+    @apply text-xl text-secondary-500;
+  }
+  header,
+  footer {
+    @apply p-4 border-secondary-50 bg-white;
+  }
+  header {
+    @apply border-b-2 sticky top-0;
+  }
+  footer {
+    @apply border-t-2;
+  }
+  address {
+    @apply text-base not-italic;
+  }
+  a {
+    @apply text-secondary-400 focus:outline-none focus:ring-2 focus:ring-secondary-500 transition-colors;
+  }
+  a:hover {
+    @apply text-secondary-500;
+  }
+  p,
+  blockquote {
+    @apply max-w-prose;
+  }
+  b,
+  strong {
+    @apply font-extrabold;
+  }
+  i,
+  em {
+    @apply italic;
+  }
+  mark {
+    @apply text-white bg-primary-500;
+  }
+  q {
+    @apply italic;
+  }
+  blockquote {
+    @apply pl-4 italic border-l-2 border-secondary-300;
+  }
+  code {
+    @apply text-base bg-secondary-50;
+  }
+  p:not(:first-child),
+  h1:not(:first-child),
+  h2:not(:first-child),
+  h3:not(:first-child),
+  h4:not(:first-child),
+  h5:not(:first-child),
+  h6:not(:first-child),
+  blockquote:not(:first-child),
+  button:not(:first-child) {
+    @apply mt-5;
   }
 }
