--- a/src/style.css
+++ b/src/style.css
@@ -35,34 +35,11 @@
       url(fonts/NationalWeb-ExtraboldItalic.woff2) format("woff2"),
       url(fonts/NationalWeb-ExtraboldItalic.woff) format("woff");
   }
-  * {
-    @apply antialiased;
-  }
-  body {
-    @apply text-xl text-secondary-500;
-  }
-  header,
-  footer {
-    @apply p-4 border-secondary-50 bg-white;
-  }
-  header {
-    @apply border-b-2 sticky top-0;
-  }
-  footer {
-    @apply border-t-2;
-  }
   address {
     @apply text-base not-italic;
   }
   a {
-    @apply text-secondary-400 focus:outline-none focus:ring-2 focus:ring-secondary-500 transition-colors;
-  }
-  a:hover {
-    @apply text-secondary-500;
-  }
-  p,
-  blockquote {
-    @apply max-w-prose;
+    @apply focus:ring-2 focus:ring-secondary-500;
   }
   b,
   strong {
@@ -83,16 +60,5 @@
   }
   code {
     @apply text-base bg-secondary-50;
-  }
-  p:not(:first-child),
-  h1:not(:first-child),
-  h2:not(:first-child),
-  h3:not(:first-child),
-  h4:not(:first-child),
-  h5:not(:first-child),
-  h6:not(:first-child),
-  blockquote:not(:first-child),
-  button:not(:first-child) {
-    @apply mt-5;
   }
 }
